--- a/PrinciplesOfComputerComposition/1.Overview.md
+++ b/PrinciplesOfComputerComposition/1.Overview.md
@@ -1,6 +1,6 @@
 # 一 概述
 
-## 1.简介
+## 1.1 简介
 
 ### 1.1.1 软硬件概念
 
@@ -130,5 +130,54 @@
 
   第零级：微程序机器M0（微指令系统：由硬件直接执行微指令）
 
+- #### 五层
 
+  > 在实际机器M1与虚拟机器M2之间还有一级虚拟机器，由操作系统软件构成
 
+  操作系统的作用： 
+
+  （1）提供了汇编和高级语言在使用和实现过程中所需的某些基本操作 
+
+  （2）控制并管理计算机系统全部硬件和软件资源
+
+  操作系统的功能是通过其**控制语言**来实现的
+
+  
+
+  具有五级层次结构的计算机系统： 
+
+  第四级：虚拟机器M4（高级语言机器：高级语言→汇编语言或其他中间语言程序，输入给M2执行或直接给M1执行）
+
+  ​      ↓ 
+
+  第三级：虚拟机器M3（汇编语言机器：具有翻译功能，将汇编语言 → 机器语言，输入给M1执行）
+
+  ​      ↓  
+
+  第二级：虚拟机器M2（操作系统机器：用机器语言解释操作系统）
+
+  ​      ↓ 
+
+  第一级：传统机器M1（机器语言机器：用微程序解释机器指令）
+
+  ​      ↓ 
+
+  第零级：微程序机器M0（微指令系统：由硬件直接执行微指令）
+
+  - ##### 划分: 软硬件
+
+    > 硬件研究的主要对象：M0、M1
+    >
+    > 软件研究的主要对象：操作系统级以上的各级虚拟机
+
+    划分并非一成不变，超大规模集成电路技术的不断发展，使得一部分软件功能将由硬件来实现 
+
+    比如，操作系统已实现部分固化（把软件永恒地存于只读存储器(ROM)中），称为固件( firmware)
+
+- #### 层级延伸
+
+  虚拟机器M4向上延伸，构成**应用语言虚拟机**
+
+  这一层级是为使计算机满足某种用途而专门设计的，所用的语言是各种面向问题的应用语言（人工智能和计算机设计等方面的语言） 
+
+  应用语言编写的程序一般由应用程序包翻译到虚拟机器M4上
