--- a/PrinciplesOfComputerComposition/1.Overview.md
+++ b/PrinciplesOfComputerComposition/1.Overview.md
@@ -140,7 +140,7 @@
 
   （2）控制并管理计算机系统全部硬件和软件资源
 
-  操作系统的功能是通过其**控制语言**来实现的
+  操作系统的功能是通过其**控制语言**来实现的(??)
 
   
 
@@ -176,8 +176,58 @@
 
 - #### 层级延伸
 
-  虚拟机器M4向上延伸，构成**应用语言虚拟机**
+  虚拟机器M4向上延伸，构成**应用语言虚拟机**(?)
 
   这一层级是为使计算机满足某种用途而专门设计的，所用的语言是各种面向问题的应用语言（人工智能和计算机设计等方面的语言） 
 
   应用语言编写的程序一般由应用程序包翻译到虚拟机器M4上
+
+
+
+### 1.1.3 体系结构和组成
+
+- #### **体系结构**
+
+  > 计算机体系结构可以理解为计算机系统的属性（概念性的结构与功能特性）—— 指令集、数据类型、存储器寻址技术、I/O机理......
+
+  由于计算机系统具有多层次结构，不同层次的开发者所看到的计算机属性也各不相同
+
+  两台不同的机器对于不同层次的开发者： 
+
+  高级语言的开发者可以看作同一属性的机器（相同体系结构）， 而汇编语言的开发者所看到的计算机属性（指令集、数据类型、寻址技术......）都是完全不同的（不同体系结构）
+
+- #### **组成**
+
+  > 计算机组成指的是如何实现计算机体系结构体现的属性
+
+  两台不同的机器，指令系统相同只能说具有相同的结构，具体到如何去实现其指令的功能，完全可以不同，即组成方式不同（实现乘法指令可以用一个专门的乘法电路，也可以采用连续的加法电路来实现）
+
+  - **类比**：
+
+    指令系统体现了机器的属性，属于计算机结构的问题 
+
+    指令如何实现（取指、分析指令、取操作数、运算、送结果等），属于计算机组成的问题
+
+  - **区分**：铁打的营盘流水的兵
+
+    一种机器的体系结构可以维持多年，但机器的组成却会随着计算机技术的发展而不断变化
+
+
+
+## 1.2 基本组成
+
+### 1.2.1 冯·诺依曼机
+
+> 1945年，数学家冯·诺依曼在研究EDVAC机时提出“存储程序”的概念，以此为基础的各类计算机通称von Neumann Machine
+
+**特点**
+
+（1）五大组成部分（运算器、存储器、控制器、输入设备、输出设备）
+
+（2）指令与数据均用二进制(binary system)表示，以同等地位存放于存储器内并按地址寻访
+
+（3）指令由操作码（操作的性质）和地址码（操作数在存储器中的位置）组成
+
+（4）指令在存储器中按顺序存放，通常情况顺序执行，特定条件下根据运算结果或设定的条件改变执行顺序
+
+（5）机器以运算器为中心，输入输出设备与存储器间的数据传送通过运算器完成
