--- a/PrinciplesOfComputerComposition/1.Overview.md
+++ b/PrinciplesOfComputerComposition/1.Overview.md
@@ -231,3 +231,35 @@
 （4）指令在存储器中按顺序存放，通常情况顺序执行，特定条件下根据运算结果或设定的条件改变执行顺序
 
 （5）机器以运算器为中心，输入输出设备与存储器间的数据传送通过运算器完成
+
+### 1.2.2 硬件框图
+
+#### **冯·诺依曼机——以运算器为中心**
+
+![VonNeumannMachine](https://github.com/WYang2018fly/me/blob/master/PrinciplesOfComputerComposition/images/VonNeumannMachine.png)
+
+#### 现代计算机——以存储器为中心
+
+![ModernComputer](https://github.com/WYang2018fly/me/blob/master/PrinciplesOfComputerComposition/images/ModernComputer.png)
+
+- #### **部件功能**
+
+  运算器：算术运算和逻辑运算，并将运算的中间结果暂存在运算器内 
+
+  存储器：存放数据和程序 
+
+  控制器：控制、指挥程序和数据的输入、运行以及处理结果 
+
+  输入设备：信息形式转换（人类熟悉→机器能识别，比如键鼠设备） 
+
+  输出设备：将机器运算结果转换成人类熟悉的信息形式，比如打印机、显示器输出
+
+  
+
+- #### 组合：CPU和I/O设备
+
+  由于运算器和控制器在逻辑关系和电路结构上联系十分紧密，大规模集成电路制作工艺出现后，这两大部件被集成在同一芯片上，统称**中央处理器**(Central Processing Unit,CPU)
+
+  把输入设备与输出设备简称为**I/O设备**(Input/Output Equipment)
+
+  →现代计算机可认为由三大部分组成：**CPU**、**I/O设备**及**主存储器**(Main Memory,MM)
