--- a/PrinciplesOfComputerComposition/1.Overview.md
+++ b/PrinciplesOfComputerComposition/1.Overview.md
@@ -242,7 +242,7 @@
 
 ![ModernComputer](https://github.com/WYang2018fly/me/blob/master/PrinciplesOfComputerComposition/images/ModernComputer.png)
 
-- #### **部件功能**
+- #### **各部件功能**
 
   运算器：算术运算和逻辑运算，并将运算的中间结果暂存在运算器内 
 
@@ -256,10 +256,33 @@
 
   
 
-- #### 组合：CPU和I/O设备
+  - ##### 组合：CPU和I/O设备
 
-  由于运算器和控制器在逻辑关系和电路结构上联系十分紧密，大规模集成电路制作工艺出现后，这两大部件被集成在同一芯片上，统称**中央处理器**(Central Processing Unit,CPU)
+    由于运算器和控制器在逻辑关系和电路结构上联系十分紧密，大规模集成电路制作工艺出现后，这两大部件被集成在同一芯片上，统称**中央处理器**(Central Processing Unit,CPU)
 
-  把输入设备与输出设备简称为**I/O设备**(Input/Output Equipment)
+    把输入设备与输出设备简称为**I/O设备**(Input/Output Equipment)
 
-  →现代计算机可认为由三大部分组成：**CPU**、**I/O设备**及**主存储器**(Main Memory,MM)
+    
+    
+    于是，现代计算机可认为由三大部分组成：**CPU**、**I/O设备**及**主存储器**(Main Memory,MM)
+    
+    ![ModernComputer2](https://github.com/WYang2018fly/me/blob/master/PrinciplesOfComputerComposition/images/ModernComputer2.png)
+    
+    **核心部件**
+    
+    - 算术逻辑单元（ALU）简称算逻部件，用来完成算术逻辑运算
+    
+    - 控制单元（CU）用来解释存储器中的指令，并发出各种操作命令来执行指令；I/O设备也受CU控制，来完成相应的输入、输出操作
+    
+    
+    
+    **存储器（主存和辅存）**
+    
+    - 主存储器是存储器子系统中的一类，用来存放程序和数据，可以直接与CPU交换信息
+    
+    - 辅助存储器
+    
+    
+    
+    
+
