--- a/PrinciplesOfComputerComposition/1.Overview.md
+++ b/PrinciplesOfComputerComposition/1.Overview.md
@@ -279,10 +279,88 @@
     **存储器（主存和辅存）**
     
     - 主存储器是存储器子系统中的一类，用来存放程序和数据，可以直接与CPU交换信息
-    
     - 辅助存储器
-    
-    
-    
-    
+
+### 1.2.3 工作步骤
+
+- 准备
+
+  （1）建立数学模型 
+
+  （2）确定计算方法 
+
+  （3）编制解题程序
+
+  ​		  程序是适合于机器运算的全部步骤，编制解题程序就是将运算步骤用一一对应的机器指令描述
+
+  - 举个🌰：计算ax^2+bx+c
+
+    分解为八个步骤
+
+    1. 将x取至运算器中
+
+    2. 乘以x,得x^2,存于运算器中
+
+    3. 再乘以a,得ax^2,存于运算器中
+
+    4. 将ax^2送至存储器中
+
+    5. 取b至运算器中
+
+    6. 乘以x,得bx,存于运算器中
+
+    7. 将ax^2从存储器中取出与bx相加,得ax^2+bx,存于运算器中
+
+    8. 再取c与ax^2+bx相加,得ax^2+bx+c,存于运算器中
+
+       - 简化步骤：ax^2+bx+c改写为(ax+b)x+c，只需五个步骤
+         1. 将x取至运算器中
+         2. 乘以a,得ax,存于运算器中
+         3. 加b,得ax+b,存于运算器中
+         4. 乘以x,得(ax+b)x,存于运算器中
+         5. 加c,得(ax+b)x+c,存于运算器中
+
+       - 转换为机器指令
+
+         设某机器的指令字长为16位，其中操作码占6位，地址码占10位
+
+         操作码：机器执行的各种操作（取数、存数、加减乘除、停机、打印等）
+
+         地址码：参加运算的数在存储器内的位置
+
+         **操作码与操作性质对应表**
+
+         | opcode | character |                           content                            |
+         | :----: | :-------: | :----------------------------------------------------------: |
+         | 000001 |   取数    | 将指令地址码指示的存储单元中的操作数取到运算器的累加器ACC中  |
+         | 000010 |   存数    |          将ACC中的数存至指令地址码指示的存储单元中           |
+         | 000011 |    加     | 将ACC中的数与指令地址码指示的存储单元中的数相加，结果存于ACC中 |
+         | 000100 |    乘     | 将ACC中的数与指令地址码指示的存储单元中的数相乘，结果存于ACC中 |
+         | 000101 |   打印    |         将指令地址码指示的存储单元中的操作数打印输出         |
+         | 000110 |   停机    |                                                              |
+
+         **程序清单**（根据步骤转换成机器指令）
+
+         | MM address(instruction) | opcode | address code |          annotation          |
+         | :---------------------: | :----: | :----------: | :--------------------------: |
+         |            0            | 000001 |  0000001000  |          取数x至ACC          |
+         |            1            | 000100 |  0000001001  |     乘以a,得ax,存于ACC中     |
+         |            2            | 000011 |  0000001010  |     加b,得ax+b,存于ACC中     |
+         |            3            | 000100 |  0000001000  |  乘以x,得(ax+b)x,存于ACC中   |
+         |            4            | 000011 |  0000001011  |  加c,得(ax+b)x+c,存于ACC中   |
+         |            5            | 000010 |  0000001100  | 存数,将ax^2+bx+c存于主存单元 |
+         |            6            | 000101 |  0000001100  |             打印             |
+         |            7            | 000110 |      -       |             停机             |
+
+         | MM address(data) | data | annotation |
+         | :--------------: | :--: | :--------: |
+         |        8         |  x   | 原始数据x  |
+         |        9         |  a   | 原始数据a  |
+         |        10        |  b   | 原始数据b  |
+         |        11        |  c   | 原始数据c  |
+         |        12        |      |  存放结果  |
+
+         
+
+- 运行
 
