update job step

--- a/PrinciplesOfComputerComposition/1.Overview.md
+++ b/PrinciplesOfComputerComposition/1.Overview.md
@@ -364,3 +364,51 @@
 
 - #### 运行
 
+  **细化后的计算机组成框图**
+
+  ![ModernComputer3(refined)](https://github.com/WYang2018fly/me/blob/master/PrinciplesOfComputerComposition/images/ModernComputer3(refined).png)
+
+  - ##### （1）主存储器
+
+    > 包括存储体M、各种逻辑部件及控制电路等 
+    >
+    > 存储体由许多存储单元组成，每个存储单元包含若干个存储元件，每个存储元件能寄存一位二进制代码   (0或1) 
+    >
+    > 一个存储单元可存储一串二进制代码（存储字），存储字的位数称为存储字长（8位/16位/32位等） 
+    >
+    > 一个存储字可代表一个二进制数，也可表示一串字符，或是一条指令 
+    >
+    > 赋予每个存储单元一个编号，称为存储单元的地址号 
+    - 主存的工作方式
+
+      按存储单元的地址号来实现对存储字各位的存（写入）和取（读出），即按地址访问存储器（访存）
+
+      →数据和指令都存放在存储体内各自所占不同的存储单元中，当反复使用某个数据或指令时，只要指出其相应的单元地址号即可 
+
+      →数据和指令都是由存储单元地址号来反映，取指令和取数据的操作可视为相同的，就可以使用一套控制线路来完成两种不同的操作
+
+      **过程**
+
+      将程序按顺序存入各存储单元，运行程序时，先给出该程序在主存的首地址，然后采用程序计数器+1的方法，自动生成下一条指令所在存储单元的地址，机器便可自动完成整个程序的操作
+
+      **实现**
+
+      1.主存配置两个寄存器**MAR**(Memory Address Register)和**MDR**(Memory Data Register)
+
+      MAR：存储器地址寄存器，用来存放访问的存储单元的地址，位数对应存储单元的个数（MAR为10位，则有2^10=1024个存储单元） 
+
+      MDR：存储器数据寄存器，用来存放从存储体某单元取出或准备往某存储单元存入的代码，位数和存储字长相等
+
+      - 扩展：解决指令和数据字长位数不同的问题
+
+        为了适应指令和数据字长的可变性，其长度不由存储字长来确定，而由**字节**的个数来表示
+
+        1个字节(byte)被定义由8位(bit)二进制代码组成。4字节数据（32位二进制代码），2字节指令（16位二进制代码）
+
+        存储字长、指令字长、数据字长三者各不相同，但必须是字节的整数倍
+
+    ​       2.CPU给主存加以各种控制信号（读写命令、地址译码驱动信号等）
+
+    ​	   注：随着硬件技术的发展，主存都制成大规模集成电路的芯片，而将MAR和MDR集成在CPU中
+
+- ##### （2）运算器
