--- a/PrinciplesOfComputerComposition/1.Overview.md
+++ b/PrinciplesOfComputerComposition/1.Overview.md
@@ -393,12 +393,11 @@
 
       **实现**
 
-      1.主存配置两个寄存器**MAR**(Memory Address Register)和**MDR**(Memory Data Register)
+      主存配置两个寄存器**MAR**(Memory Address Register)和**MDR**(Memory Data Register)，CPU给主存加以各种控制信号（读写命令、地址译码驱动信号等）
 
       MAR：存储器地址寄存器，用来存放访问的存储单元的地址，位数对应存储单元的个数（MAR为10位，则有2^10=1024个存储单元） 
 
       MDR：存储器数据寄存器，用来存放从存储体某单元取出或准备往某存储单元存入的代码，位数和存储字长相等
-
       - 扩展：解决指令和数据字长位数不同的问题
 
         为了适应指令和数据字长的可变性，其长度不由存储字长来确定，而由**字节**的个数来表示
@@ -407,8 +406,8 @@
 
         存储字长、指令字长、数据字长三者各不相同，但必须是字节的整数倍
 
-    ​       2.CPU给主存加以各种控制信号（读写命令、地址译码驱动信号等）
-
     ​	   注：随着硬件技术的发展，主存都制成大规模集成电路的芯片，而将MAR和MDR集成在CPU中
 
-- ##### （2）运算器
+    
+
+  - ##### （2）运算器
