--- a/PrinciplesOfComputerComposition/1.Overview.md
+++ b/PrinciplesOfComputerComposition/1.Overview.md
@@ -393,7 +393,7 @@
 
       **实现**
 
-      主存配置两个寄存器**MAR**(Memory Address Register)和**MDR**(Memory Data Register)，CPU给主存加以各种控制信号（读写命令、地址译码驱动信号等）
+      主存配置两个寄存器**MAR**(Memory Address Register)和**MDR**(Memory Data Register)，CPU给主存加以各种控制信号——读写命令、地址译码驱动信号等（随着硬件技术的发展，主存都制成大规模集成电路的芯片，而将MAR和MDR集成在CPU中）
 
       MAR：存储器地址寄存器，用来存放访问的存储单元的地址，位数对应存储单元的个数（MAR为10位，则有2^10=1024个存储单元） 
 
@@ -405,8 +405,6 @@
         1个字节(byte)被定义由8位(bit)二进制代码组成。4字节数据（32位二进制代码），2字节指令（16位二进制代码）
 
         存储字长、指令字长、数据字长三者各不相同，但必须是字节的整数倍
-
-    ​	   注：随着硬件技术的发展，主存都制成大规模集成电路的芯片，而将MAR和MDR集成在CPU中
 
     
 
