--- a/PrinciplesOfComputerComposition/1.Overview.md
+++ b/PrinciplesOfComputerComposition/1.Overview.md
@@ -220,6 +220,8 @@
 
 > 1945年，数学家冯·诺依曼在研究EDVAC机时提出“存储程序”的概念，以此为基础的各类计算机通称von Neumann Machine
 
+![VonNeumannArchitecture](https://github.com/WYang2018fly/me/blob/master/PrinciplesOfComputerComposition/images/VonNeumannArchitecture.png)
+
 **特点**
 
 （1）五大组成部分（运算器、存储器、控制器、输入设备、输出设备）
