modify pic size

--- a/PrinciplesOfComputerComposition/1.Overview.md
+++ b/PrinciplesOfComputerComposition/1.Overview.md
@@ -220,7 +220,7 @@
 
 > 1945年，数学家冯·诺依曼在研究EDVAC机时提出“存储程序”的概念，以此为基础的各类计算机通称von Neumann Machine
 
-![VonNeumannArchitecture](https://github.com/WYang2018fly/me/blob/master/PrinciplesOfComputerComposition/images/VonNeumannArchitecture.png)
+![VonNeumannArchitecture](https://github.com/WYang2018fly/me/blob/master/PrinciplesOfComputerComposition/images/VonNeumannArchitecture.png){:height="494" width="520"}
 
 **特点**
 
