update job step

--- a/PrinciplesOfComputerComposition/1.Overview.md
+++ b/PrinciplesOfComputerComposition/1.Overview.md
@@ -412,3 +412,116 @@
         
 
   - ##### （2）运算器
+
+    > 至少包含3个寄存器(ACC、MQ、X)和1个算术逻辑单元(ALU) 
+    >
+    > 其中ACC(Accumulator)为累加器，MQ(Multiple-Quotient  Register)为乘商寄存器，X为操作数寄存器 
+    >
+    > 这三个寄存器在完成不同运算时，存放的操作数类别也各不相同
+    >
+    > 注：不同机器的运算器是不同的，组成框图中所示的运算器可将运算结果从ACC送至存储器中的MDR，存储器的操作数也可以从MDR送至运算器中的ACC、MQ或X
+
+    **各寄存器完成不同运算所存放的各类操作数**
+
+    |      |     加     |     减     |       乘       |      除      |
+    | :--: | :--------: | :--------: | :------------: | :----------: |
+    | ACC  | 被加数及和 | 被减数及差 |    乘积高位    | 被除数及余数 |
+    |  MQ  |            |            | 乘数及乘积低位 |      商      |
+    |  X   |    加数    |    减数    |     被乘数     |     除数     |
+
+    **操作过程**
+
+    > 设：
+    >
+    > M表示存储器任一地址号，[M]表示对应M地址号单元中的内容 
+    >
+    > X表示X寄存器，[X]表示X寄存器中的内容 
+    >
+    > ACC表示累加器，[ACC]表示累加器中的内容 
+    >
+    > MQ表示乘商寄存器，[MQ]表示乘商寄存器中的内容
+
+    - 加法
+
+      [M] → X 
+
+      [ACC] + [X] → [ACC]
+
+      
+
+      [ACC]看作被加数，先从主存取出存放在M地址号存储单元内的加数[M]，送至运算器的X寄存器中，接着将被加数[ACC]与加数[X]相加，和保留在ACC中
+
+    - 减法
+
+      [M] → X 
+
+      [ACC] - [X] → [ACC]
+
+      
+
+      [ACC]看作被减数，先从主存取出存放在M地址号存储单元内的减数[M]，送至运算器的X寄存器中，接着将被减数[ACC]与减数[X]相减，差保留在ACC中
+
+      
+
+    - 乘法
+
+      [M] → MQ 
+
+      [ACC] → X 
+
+      0 → ACC 
+
+      [X] × [MQ] → ACC//MQ(ACC和MQ串接)
+
+      
+
+      [ACC]看作被乘数，先从主存取出存放在M地址号存储单元内的乘数[M]并送入乘商寄存器MQ，再把被乘数送入X寄存器中，并将ACC清零，[X]与[MQ]相乘，积的高位保留在ACC中，低位保留在MQ中(?)
+
+    - 除法
+
+      [M] → X 
+
+      [ACC] ÷ [X] → MQ 
+
+      余数R在ACC中
+
+      
+
+      [ACC]看作被除数，先从主存取出存放在M地址号存储单元内的除数[M]并送入X寄存器，然后[ACC]除以[X]，商暂留于MQ，[ACC]为余数R
+
+      
+
+  - ##### （3）控制器
+
+    > 控制器是计算机的神经中枢，由它指挥各部件自动、协调地工作
+    >
+    > 由程序计数器(Program Counter, PC)、指令寄存器(Instruction Register, IR)和控制单元(CU)组成
+    >
+    > PC：存放当前想要执行指令（下一条指令）的地址，它与主存的MAR之间有一条直接通路且具有自动加1的功能，即可形成下一条指令的地址
+    >
+    > IR：存放当前执行的指令，内容来自主存的MDR
+    >
+    > ​		OP(IR) → CU，IR中的操作码送至CU，用来分析指令
+    >
+    > ​        Ad(IR) → MAR，IR中的地址码作为操作数的地址送至存储器的MAR
+    >
+    > CU：分析当前指令所需完成的操作，并发出各种微操作命令序列，用来控制所有被控对象
+
+    完成一条指令操作的三个过程：
+
+    取指令 → 分析 → 执行（fetch → decode → execute）
+
+    
+
+    取指过程：命令存储器读出一条指令 
+
+    分析过程：指出该指令要完成什么样的操作，并按寻址特征指明操作数的地址 
+
+    执行过程：根据操作数所在的地址以及指令的操作码完成某种操作
+
+    
+
+  - ##### （4）I/O
+
+  
+
