update job step

--- a/PrinciplesOfComputerComposition/1.Overview.md
+++ b/PrinciplesOfComputerComposition/1.Overview.md
@@ -501,21 +501,21 @@
     >
     > IR：存放当前执行的指令，内容来自主存的MDR
     >
-    > ​		OP(IR) → CU，IR中的操作码送至CU，用来分析指令
+    > ​		OP(IR) → CU，IR中的操作码送至CU来分析指令
     >
     > ​        Ad(IR) → MAR，IR中的地址码作为操作数的地址送至存储器的MAR
     >
-    > CU：分析当前指令所需完成的操作，并发出各种微操作命令序列，用来控制所有被控对象
+    > CU：分析当前指令所需完成的操作，并发出各种微操作命令序列来控制所有被控对象
 
-    完成一条指令操作的三个过程：
+    完成一条指令操作的三个阶段：
 
     取指令 → 分析 → 执行（fetch → decode → execute）
 
     
 
-    取指过程：命令存储器读出一条指令 
+    取指过程：命令存储器读出一条指令
 
-    分析过程：指出该指令要完成什么样的操作，并按寻址特征指明操作数的地址 
+    分析过程：对指令进行分析，指出该指令要完成什么样的操作(OP code)，并按寻址特征指明操作数的地址(Ad code)
 
     执行过程：根据操作数所在的地址以及指令的操作码完成某种操作
 
