--- a/PrinciplesOfComputerComposition/1.Overview.md
+++ b/PrinciplesOfComputerComposition/1.Overview.md
@@ -534,7 +534,7 @@
 
   1.首先，将程序清单所列的所有指令和数据，通过键盘输入到主存第0号至第12号单元中，并置PC的初值为0（令程序的首地址为0）
 
-  2.启动机器后，控制器将PC的内容送至主存的MAR，并命令存储器做读操作，主存0号存储单元的内容（0000010000001000）被送入到MDR内，MDR送至控制器的IR。CU分析指令，操作码（000001）为取数指令，于是将IR中的地址码（0000001000）送至MAR，并命令存储器做读取操作，将该地址单元中的操作数x送至MDR，再由MDR送至运算器的ACC，至此完成第一条指令的全过程（将操作数x送至运算器ACC中）。与此同时，PC完成自动加1，形成下一条指令的地址第1号
+  2.启动机器后，控制器将PC的内容送至主存的MAR，并命令存储器做读操作，主存0号存储单元的内容（0000010000001000）被送入到MDR内，MDR送至控制器的IR。CU分析指令，操作码（000001）为取数指令，于是将IR中的地址码（0000001000）送至MAR，并命令存储器做读取操作，将该地址（第8号）存储单元中的操作数x送至MDR，再由MDR送至运算器的ACC，至此完成第一条指令的全过程（将操作数x送至运算器ACC中）。与此同时，PC完成自动加1，形成下一条指令的地址第1号
 
   3.同上所述，PC将第二条指令的地址送至MAR，再次命令存储器做读操作，将0001000000001001送入MDR，MDR送至IR。CU分析指令操作码000100为乘法指令，于是向存储器发出读取命令，取出地址为0000001001（第9号）存储单元中的操作数a，经MDR送至运算器MQ，CU向运算器发出乘法操作命令，完成ax的运算，并把运算结果ax存放到ACC中。PC + 1 → PC，形成下一条指令的地址第二号
 
