--- a/PrinciplesOfComputerComposition/1.Overview.md
+++ b/PrinciplesOfComputerComposition/1.Overview.md
@@ -419,7 +419,7 @@
     >
     > 这三个寄存器在完成不同运算时，存放的操作数类别也各不相同
     >
-    > 注：不同机器的运算器是不同的，组成框图中所示的运算器可将运算结果从ACC送至存储器中的MDR，存储器的操作数也可以从MDR送至运算器中的ACC、MQ或X
+    > 注：不同机器的运算器是不同的，组成框图中所示的运算器可将运算结果从ACC送至存储器中的MDR，存储器的操作数也可以从MDR送至运算器中的ACC、MQ或X，有些机器用MDR取代X寄存器
 
     **各寄存器完成不同运算所存放的各类操作数**
 
@@ -530,15 +530,15 @@
 
 
 
-  #### **计算机工作的全过程**
+  #### **工作的全过程**
 
-  1.首先，将程序清单所列的所有指令和数据，通过键盘输入到主存第0号至第12号存储单元中，并设置PC的初始值为0（令程序的首地址为0）
+  1.首先，将程序清单所列的所有指令和数据，通过键盘输入到主存储器的第0号至第12号存储单元中，并设置PC的初始值为0（令程序的首地址为0）。
 
-  2.启动机器后，控制器将PC的内容送至主存的MAR，并命令存储器做读操作，主存0号存储单元的内容（0000010000001000）被送入到MDR内，MDR送至控制器的IR。CU分析指令，操作码（000001）为取数指令，于是将IR中的地址码（0000001000）送至MAR，并命令存储器做读取操作，将该地址（第8号）存储单元中的操作数x送至MDR，再由MDR送至运算器的ACC，至此完成第一条指令的全过程（将操作数x送至运算器ACC中）。与此同时，PC完成自动加1，形成下一条指令的地址第1号
+  2.启动机器后，控制器将PC的内容送至主存的MAR，并命令存储器做读操作，主存0号存储单元的内容（0000010000001000）被送入到MDR内，再将MDR送至控制器的IR。CU分析指令，操作码（000001）为取数指令，于是将IR中的地址码（0000001000）送至MAR，并命令存储器做读取操作，将该地址（第8号）存储单元中的操作数x送至MDR，再由MDR送至运算器的ACC。与此同时，PC完成自动加1，形成下一条指令的地址第1号。至此完成第一条指令的全过程（将操作数x送至运算器ACC中）。
 
-  3.同上所述，PC将第二条指令的地址送至MAR，再次命令存储器做读操作，将0001000000001001送入MDR，MDR送至IR。CU分析指令，操作码（000100）为乘法指令，于是向存储器发出读取命令，取出地址为0000001001（第9号）存储单元中的操作数a，经MDR送至运算器MQ，CU向运算器发出乘法操作命令，完成ax的运算，并把运算结果ax存放到ACC中。PC + 1 → PC，形成下一条指令的地址第二号
+  3.同上所述，PC将第二条指令的地址送至MAR，再次命令存储器做读操作，将0001000000001001送入MDR，MDR送至IR。CU分析指令，操作码（000100）为乘法指令，于是先向存储器发出读取命令，取出地址为0000001001（第9号）存储单元中的操作数a，经MDR送至运算器MQ；CU再向运算器发出乘法操作命令，完成ax的运算，并把运算结果ax存放到ACC中。PC + 1 → PC，形成下一条指令的地址第二号。
 
-  4.以此类推，逐条取指、分析、执行直至打印出最终运算结果，执行停机指令，关闭机器
+  4.以此类推，逐条取指、分析、执行直至打印出最终运算结果，执行停机指令，关闭机器。
 
   
 
